[gd_scene load_steps=17 format=3 uid="uid://dmntjmeu2sgcu"]

[ext_resource type="PackedScene" path="res://addons/inventory_example/3d/player/Player.tscn" id="1"]
[ext_resource type="Script" path="res://addons/inventory_example/3d/Level1.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bhu5hq8kx8pov" path="res://addons/inventory_example/inventories/simple/InventoryUI.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://dk0uyb3ayyxtk" path="res://addons/inventory_editor/default/fonts/Pangolin-Regular.ttf" id="4"]
[ext_resource type="Texture2D" uid="uid://yxnjmxcqgl2u" path="res://addons/inventory_example/textures/inventories/Chest.png" id="5"]
[ext_resource type="Script" path="res://addons/inventory_editor/InventoryItem3D.gd" id="6"]
[ext_resource type="PackedScene" path="res://addons/inventory_example/3d/items/HealthNormal.tscn" id="7"]
[ext_resource type="PackedScene" path="res://addons/inventory_example/3d/items/ManaNormal.tscn" id="8"]
[ext_resource type="PackedScene" path="res://addons/inventory_example/3d/items/SwordDestroyer.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://mb1auoxfd821" path="res://addons/inventory_example/3d/items/SwordDragonhunter.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://dskmudl737vey" path="res://addons/inventory_example/3d/items/HealthBig.tscn" id="11"]
[ext_resource type="PackedScene" path="res://addons/inventory_example/3d/items/ManaBig.tscn" id="12"]

[sub_resource type="PlaneMesh" id="1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7h4a6"]
albedo_color = Color(0, 0.298039, 0.0235294, 1)
metallic_specular = 0.0

[sub_resource type="BoxShape3D" id="3"]

[sub_resource type="BoxShape3D" id="4"]
size = Vector3(0.0388198, 7.8478, 2)

[node name="Level" type="Node3D"]
script = ExtResource( "2" )

[node name="Background" type="MeshInstance3D" parent="."]
transform = Transform3D(35, 0, 0, 0, 1, 0, 0, 0, 35, 0, 0, 0)
mesh = SubResource( "1" )
surface_material_override/0 = SubResource( "StandardMaterial3D_7h4a6" )

[node name="Ground" type="StaticBody3D" parent="Background"]

[node name="CollisionShape" type="CollisionShape3D" parent="Background/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.15939, 0)
shape = SubResource( "3" )

[node name="WallXNegative" type="StaticBody3D" parent="Background"]

[node name="CollisionShape" type="CollisionShape3D" parent="Background/WallXNegative"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0)
shape = SubResource( "4" )

[node name="WallXPositive" type="StaticBody3D" parent="Background"]
transform = Transform3D(-1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0)

[node name="CollisionShape" type="CollisionShape3D" parent="Background/WallXPositive"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0)
shape = SubResource( "4" )

[node name="WallZNegative" type="StaticBody3D" parent="Background"]
transform = Transform3D(-1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0)

[node name="CollisionShape" type="CollisionShape3D" parent="Background/WallZNegative"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0)
shape = SubResource( "4" )

[node name="WallZPositive" type="StaticBody3D" parent="Background"]
transform = Transform3D(-1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0)

[node name="CollisionShape" type="CollisionShape3D" parent="Background/WallZPositive"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01813, 1.75066, 0)
shape = SubResource( "4" )

[node name="DirectionalLight" type="DirectionalLight3D" parent="Background"]
transform = Transform3D(0.0285714, 0, 0, 0, -1.62921e-07, 1, 0, -0.0285714, -4.65488e-09, 0, 20, 0)
light_energy = 3.0

[node name="Player" parent="." instance=ExtResource( "1" )]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -21, 0, -21)

[node name="CanvasError" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasError"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( "4" )
text = "To support dialogues you have to autoload res://addons/dialogue_editor/DialogueManager.gd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasInventory" type="CanvasLayer" parent="."]

[node name="Inventory" parent="CanvasInventory" instance=ExtResource( "3" )]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 100.0
offset_right = 0.0
min_size = Vector2(300, 300)
inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="CanvasButton" type="CanvasLayer" parent="."]

[node name="TextureButton" type="TextureButton" parent="CanvasButton"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 100.0
texture_normal = ExtResource( "5" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Node3D" parent="."]

[node name="Item3D" type="Node3D" parent="Items"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 15)
script = ExtResource( "6" )
item_put = "5a340c0a-19f0-4827-ad81-d0cfbab5c575"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_5a340c0a-19f0-4827-ad81-d0cfbab5c575" parent="Items/Item3D" instance=ExtResource( "8" )]

[node name="Item3D7" type="Node3D" parent="Items"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 0)
script = ExtResource( "6" )
item_put = "5e7ebf21-abad-4c18-bce7-915ae9e57a31"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_5e7ebf21-abad-4c18-bce7-915ae9e57a31" parent="Items/Item3D7" instance=ExtResource( "12" )]

[node name="Item3D2" type="Node3D" parent="Items"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, -15)
script = ExtResource( "6" )
item_put = "5a340c0a-19f0-4827-ad81-d0cfbab5c575"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_5a340c0a-19f0-4827-ad81-d0cfbab5c575" parent="Items/Item3D2" instance=ExtResource( "8" )]

[node name="Item3D3" type="Node3D" parent="Items"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, -15)
script = ExtResource( "6" )
item_put = "84993f8a-a25d-48f2-8a90-975f79f8995d"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_84993f8a-a25d-48f2-8a90-975f79f8995d" parent="Items/Item3D3" instance=ExtResource( "7" )]

[node name="Item3D4" type="Node3D" parent="Items"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, 15)
script = ExtResource( "6" )
item_put = "84993f8a-a25d-48f2-8a90-975f79f8995d"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_84993f8a-a25d-48f2-8a90-975f79f8995d" parent="Items/Item3D4" instance=ExtResource( "7" )]

[node name="Item3D8" type="Node3D" parent="Items"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17, 0, 0)
script = ExtResource( "6" )
item_put = "f2d2172d-9c78-4b5a-bd50-710cb914e578"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_f2d2172d-9c78-4b5a-bd50-710cb914e578" parent="Items/Item3D8" instance=ExtResource( "11" )]

[node name="Item3D5" type="Node3D" parent="Items"]
transform = Transform3D(1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 3.5, 25)
script = ExtResource( "6" )
item_put = "52d0a7fa-b133-45f1-9b75-b9818c8599d2"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_52d0a7fa-b133-45f1-9b75-b9818c8599d2" parent="Items/Item3D5" instance=ExtResource( "9" )]

[node name="Item3D6" type="Node3D" parent="Items"]
transform = Transform3D(1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 3.5, -25)
script = ExtResource( "6" )
item_put = "38a142cc-57cb-4f07-8e61-3b7c6601f3b8"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_38a142cc-57cb-4f07-8e61-3b7c6601f3b8" parent="Items/Item3D6" instance=ExtResource( "10" )]
